[package]
name = "rust_proxy"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"
hyper = { version = "0.14", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "0.2"
httparse = "1.8"
bytes = "1.5"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
sha1 = "0.10"
nix = "0.27"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenv = "0.15"
tokio-tungstenite = "0.21"
serde_json = "1.0"
futures-util = "0.3"
futures = "0.3"
